fix tag list margin-left in collapse mode

--- a/_sass/module-blog.scss
+++ b/_sass/module-blog.scss
@@ -12,6 +12,9 @@
     h3{
       margin: 20px 0 20px;
     }
+    .tag-list{
+      margin-left: 0;
+    }
   }
 }
 
